tests/errors/undefined-symbol.p8

ERR,    JMP ADDR

ERR2,   TAD BLUE

ERR3,   AND GRASS